--- a/.github/workflows/ssh_amd64.yml
+++ b/.github/workflows/ssh_amd64.yml
@@ -6,7 +6,7 @@ jobs:
     job1:
       strategy:
         matrix:
-         target_arch: [x86_64]
+         target_arch: [amd64]
       runs-on: ubuntu-latest
       env:
         ARCH: amd64
@@ -15,12 +15,14 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Pre configuration
+        env:
+          PASSWD: ${{ secrets.PASSWD }}
         run: |
           sudo apt update 
           sudo apt install neofetch
           sudo snap install ngrok
           sudo /usr/sbin/sshd
-          echo -e "1\n1" | sudo passwd runner
+          echo -e "$PASSWD\n$PASSWD" | sudo passwd runner
           echo -e "\nexport PS1='\u@\h:\w\$ '" | sudo tee -a /etc/bash.bashrc
           echo -e "\nneofetch" | sudo tee -a /etc/bash.bashrc
           ln -s /home/runner/work/github-actions/github-actions ~/repo
@@ -37,13 +39,15 @@ jobs:
         env: 
           BOT_TOKEN: ${{ secrets.GIT_SSH_BOT_TOKEN }}
           USERS: ${{ secrets.USERS }}
+          NAME: ${{ secrets.TMATE_NAME }}
+          PASSWD: ${{ secrets.PASSWD }}
         run: |
           ng_url=`curl -s http://localhost:4040/api/tunnels | grep -o tcp://[0-9a-z.:]*`
           host=`echo $ng_url| cut -d ':' -f2|cut -c3-`
           port=`echo $ng_url| cut -d ':' -f3`
-          msg="$ARCH: %0A\
-          Tmate: %0A\
-          \`ssh $ARCH/git@subdomain.tmate.io\` %0A\
+          msg="$ARCH:%0A\
+          Password: $PASSWD%0A\
+          Tmate: `ssh $ARCH/$NAME@subdomain.tmate.io\`%0A\
           Ngrok: \`ssh -p $port runner@$host\`"
           for USER in $USERS
           do curl "https://api.telegram.org/bot$BOT_TOKEN/sendMessage?chat_id=$USER&text=$msg&parse_mode=MarkdownV2"
@@ -52,7 +56,8 @@ jobs:
       - name: Start tmate
         env:
           TMATE_API: ${{ secrets.TMATE_API_AMD64 }}
+          NAME: ${{ secrets.TMATE_NAME }}
         run: |
           wget https://github.com/tmate-io/tmate/releases/download/2.4.0/tmate-2.4.0-static-linux-$ARCH.tar.xz &> /dev/null
           tar -xf tmate-2.4.0-static-linux-$ARCH.tar.xz
-          $PWD/tmate-2.4.0-static-linux-$ARCH/tmate -F -k $TMATE_API -n git
+          $PWD/tmate-2.4.0-static-linux-$ARCH/tmate -F -k $TMATE_API -n $NAME >/dev/null
